--- a/index.html
+++ b/index.html
@@ -16,16 +16,20 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">Plug.dj Backgrounds</h1>
+        <h1 class="header">Plug.dj Backgrounds </h1>
         <p class="header">Various backgrounds for plug.dj</p>
 
         <ul>
-          <li class="download"><a class="buttons" href="https://github.com/jjrambo97/backgrounds/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/jjrambo97/backgrounds/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/jjrambo97/backgrounds">View On GitHub</a></li>
-        </ul>
+<li class="download"><a class="buttons" href="https://mega.co.nz/#!HBE0UJJB!DugnzyLjqct2YBf4F8E3rDX0irAyUfptMWIRnTy9XEM">Rainbow Dash </a></li>
+<li class="download"><a class="buttons" href="https://mega.co.nz/#!WJklUCBS!UVZ5R0lYCn4mJyWlxJlguXdyGARFVQlGIaMAkfkP8k8">Applejack</a></li>
+<li class="download"><a class="buttons" href="https://mega.co.nz/#!qIcVCSgT!a-nSTxM5Oc5stLpC2MINGkglPvItUgwTPPfnmdn9Blc">Fluttershy</a></li>
+<li class="download"><a class="buttons" href="https://mega.co.nz/#!3RlE0LjC!RqndPhCNs_uUIGggVOY1jlIMZo9yfG-jjZxHL0ARvns">Lyra</a></li>
+<li class="download"><a class="buttons" href="https://mega.co.nz/#!GRsF0LTQ!KzY8B0LoM-ePYAFQIH63nAc-jhtoUfq049IE4DNNmvU">Pinkie Pie</a></li>
+<li class="download"><a class="buttons" href="https://mega.co.nz/#!iM1GzYwB!BCrOtBE9tQm8pEuGqnMB3TdqV7YMDb3MgAY2Gav0KGs">Rarity</a></li>
+<li class="download"><a class="buttons" href="https://mega.co.nz/#!3V90zR5A!AC6MTCwmk8bQGQZ8yjNwTHcF0KsRlGSLpmIyBPqlZx4">Twilight Sparkle</a></li>
+       
 
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/jjrambo97">jjrambo97</a></p>
+        <p class="header">This project is maintained by ,DerpTheBass'</p>
 
 
       </header>
@@ -75,7 +79,7 @@
 <p><img src="http://i.imgur.com/mELqrmQ.png" alt="If you can see this, the image didn't load properly"></p>
       </section>
       <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+      <p>Theme by GitHub pages; Theme name: Dinky</p>
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
