--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <h3><em>I Do not own the backgrounds nor did I make them</em></h3>
 
-<hr><p>To install:</p>
+<p>To install:</p>
 
 <ol>
 <li><p>Select a background you want</p></li>
