--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
       </header>
       <section>
         <h1>Multiple backgrounds for the site plug.dj.</h1>
-
-<h3><em>I Do not own the backgrounds nor did I make them</em></h3>
+        <h5><em>*I do not own the backgrounds nor did I make them</em></h5>
 
 <p>To install:</p>
 
