--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       
       </header>
       <section>
-        <h1>Multiple backgrounds for the site plug.dj.</h1>
+        <h2>Multiple backgrounds for the site plug.dj.</h2>
         <h5><em>*I do not own the backgrounds nor did I make them</em></h5>
 
 <p>To install:</p>
@@ -45,7 +45,7 @@
 <li><p>Refresh Plug</p></li>
 </ol><p>You can install all of the backgrounds if you want and switch them out by enabling only one.</p>
 
-<hr><h3>MyLitteVisual's backgrounds</h3>
+<h3>MyLitteVisual's backgrounds</h3>
 
 <h4>Rainbow Dash background:</h4>
 
