--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
       
       </header>
       <section>
-        <h2>Multiple backgrounds for the site plug.dj.</h2>
-        <h5><em>*I do not own the backgrounds nor did I make them</em></h5>
+        <h2>Multiple backgrounds for the site plug.dj*</h2>
 
 <p>To install:</p>
 
@@ -78,6 +77,7 @@
       <footer>
       <p>Theme by GitHub pages</p>
       <p>Maintained by ,DerpTheBass'</p>
+      <p>*I do not own the backgrounds nor did I make them</p>
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
