--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <ol>
 <li><p>Select a background you want</p></li>
 <li><p>Click the download button</p></li>
-<li><p><strong>Drag the downloaded file on your extensions page</strong></p></li>
+<li><p><strong>Drag the downloaded file onto your extensions page</strong></p></li>
 <li><p>A popup should appear, click "Add"</p></li>
 <li><p>Refresh Plug</p></li>
 </ol><p>You can install all of the backgrounds if you want and switch them out by enabling only one.</p>
